--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 .container{
 	width: 800px;
-	height: 2300px;
+	height: 2350px;
 	background: rgba(0,0,0,0.4);
 	padding: 40px;
 	color: white;
@@ -233,6 +233,13 @@ form {
     margin-left: 30px;
 }
 
+.else {
+    font-size: 35px;
+    margin: 20px;
+    color: rgb(242, 219, 187);
+    font-family: sans-serif;
+    background-attachment: fixed;
+}
 
 
 #about-me {
